@@ -3,21 +3,21 @@ module Spec
     def deprecate(method, alternate_method=nil)
        message = <<-NOTICE
 
+*****************************************************************
 DEPRECATION WARNING: you are using deprecated behaviour that will
 be removed from a future version of RSpec.
 
-#{method} is deprecated.
+#{caller(0)[2]}
+
+* #{method} is deprecated.
 NOTICE
       if alternate_method
         message << <<-ADDITIONAL
-Please use #{alternate_method} instead.
+* please use #{alternate_method} instead.
 ADDITIONAL
       end
       
-      message << <<-MORE
-
-#{caller(0)[2]}
-MORE
+      message << "*****************************************************************"
       warn(message)
     end
     
