@@ -30,7 +30,14 @@ module Spec
       #     end
       #   end
       def predicate_matchers
-        @predicate_matchers ||= {}
+        @predicate_matchers ||= HashWithDeprecationNotice.new
+      end
+      
+      class HashWithDeprecationNotice < Hash
+        def []=(k,v)
+          Spec.deprecate("predicate_matchers", "the new Matcher DSL")
+          super
+        end
       end
 
       def define_methods_from_predicate_matchers # :nodoc:
